--- a/01_aulas/01_aula_minicurso_r_see_2019.html
+++ b/01_aulas/01_aula_minicurso_r_see_2019.html
@@ -4,6 +4,7 @@
     <title>XXX Semana de Estudos da Ecologia    Introdução à linguagem R: manipulação e visualização de dados</title>
     <meta charset="utf-8" />
     <meta name="author" content="Maurício Vancine   Helena Oliveira   Lucas Almeida" />
+    <meta name="date" content="2019-06-11" />
     <link href="libs/remark-css/metropolis.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/5235085b15.js"></script>
   </head>
@@ -12,9 +13,9 @@
 class: center, middle, inverse, title-slide
 
 # XXX Semana de Estudos da Ecologia <br><br> Introdução à linguagem R: manipulação e visualização de dados
-## <br> 1 Linguagem R, aplicações e material <br>
+## <br>1 Linguagem R, aplicações e material <br>
 ### Maurício Vancine <br> Helena Oliveira <br> Lucas Almeida <br>
-### <br> xaringan [presentation ninja] <br> 06/11/2019
+### <br> 06/11/2019
 
 ---
 
@@ -254,7 +255,7 @@ Prof. Victor Landeiro
 
 background-image: url(https://avatars3.githubusercontent.com/u/13972235?s=400&amp;v=4)
 background-size: 250px
-background-position: 10% 70%
+background-position: 10% 65%
 
 # 1.4 Apostilas, sites e livros
 
@@ -393,7 +394,7 @@ background-position: 50% 60%
 
 &lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
 
-[*] https://www.ibpad.com.br/o-que-fazemos/publicacoes/introducao-ciencia-de-dados-com-r/
+[*] https://cdr.ibpad.com.br/
 
 ---
 
@@ -421,9 +422,9 @@ background-position: 50% 70%
 
 ## Livros
 
-### **R for Data Analysis in easy steps - R Programming essentials (2018)**
+### **R for Data Analysis (2018)**
 
-&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
+&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
 
 [*] https://ineasysteps.com/products-page/all_books/r-data-analysis-easy-steps/
 
@@ -437,9 +438,9 @@ background-position: 50% 70%
 
 ## Livros
 
-### **The Book of R: A First Course in Programming and Statistics (2016)**
+### **The Book of R (2016)**
 
-&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
+&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
 
 [*] https://nostarch.com/bookofr
 
@@ -728,11 +729,11 @@ background-position: 50% 50%
 
 # Recomendação
 
-## **Ciência de Dados com R: introdução (2018)**
+### **Ciência de Dados com R: introdução (2018)**
 
 &lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
 
-[*] https://www.ibpad.com.br/o-que-fazemos/publicacoes/introducao-ciencia-de-dados-com-r/
+[*] https://cdr.ibpad.com.br/
 
 ---
 
@@ -742,7 +743,7 @@ background-position: 50% 55%
 
 # Recomendação
 
-## **R for Data Science (2017)**
+### **R for Data Science (2017)**
 
 &lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
 
@@ -756,7 +757,7 @@ background-position: 50% 50%
 
 # Recomendação
 
-## **R Markdown: The Definitive Guide (2018)**
+### **R Markdown: The Definitive Guide (2018)**
 
 &lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
 
