--- a/01_aulas/02_aula_minicurso_r_see_2019.html
+++ b/01_aulas/02_aula_minicurso_r_see_2019.html
@@ -302,7 +302,7 @@ print("Isso é o resultado que deve aparecer no console")
 
 background-image: url(img/utf8.png)
 background-size: 700px
-background-position: 50% 70%
+background-position: 50% 75%
 
 # 2.2 Editor/Roteiro (*code*/*script*)
 
@@ -679,7 +679,7 @@ obj_10 &lt;- 10
 
 ### Agora a palavra **obj_10** vale **10**
 
-#### Mas não aconteceu nada....
+### Mas não aconteceu nada....
 
 ---
 
@@ -1553,6 +1553,10 @@ background-position: 35% 60%
 
 ```r
 nrow(available.packages(repos = "http://cran.r-project.org"))
+```
+
+```
+## [1] 15181
 ```
 
 &lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
